tests/tests/errors/2006-13.vb
'#compiler-options:/bugreport:
'#compiler-message:Command line error BC2006 : option 'bugreport' requires ':<file>'
'#exit-code:1